# chat-storage-search

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/android-bridge/: Cargo.toml
crates/android-bridge/src/: lib.rs
crates/core/: Cargo.toml
crates/core/benches/: phase1_benchmarks.rs  phase5_benchmarks.rs  phase6_int4_benchmarks.rs  phase8_benchmarks.rs
crates/core/src/: cbor.rs  config.rs  core_impl.rs  desktop_index.rs  lib.rs  perf.rs  util.rs
crates/core/src/archive/: body_payload.rs  compaction.rs  coordinator.rs  download.rs  epoch_keys.rs  event_journal.rs  manifest_builder.rs  mod.rs  prefetch.rs  privacy.rs  routing.rs  segment_builder.rs  upload.rs
crates/core/src/backup/: compaction.rs  coordinator.rs  event_journal.rs  manifest_builder.rs  mod.rs  segment_builder.rs  wire.rs
crates/core/src/backup/sinks/: android.rs  icloud.rs  memory.rs  mod.rs  zk_fabric.rs
crates/core/src/crypto/: aead.rs  content_hash.rs  convergent.rs  key_hierarchy.rs  key_wrap.rs  mod.rs  signing.rs
crates/core/src/formats/: manifest.rs  media_descriptor.rs  mod.rs  search_shard.rs
crates/core/src/local_store/: db.rs  mod.rs  schema.rs  state_machines.rs
crates/core/src/media/: cache.rs  caption.rs  chunker.rs  coordinator.rs  download.rs  migration.rs  mod.rs  processor.rs  routing.rs  thumbnail.rs  upload.rs
crates/core/src/media/sinks/: google_drive.rs  icloud.rs  mod.rs  zk_fabric.rs
crates/core/src/message/: mod.rs  processor.rs
crates/core/src/models/: clip.rs  document.rs  embeddings.rs  embeddings_onnx.rs  ep_tuning.rs  http_downloader.rs  mod.rs  model_manager.rs  ocr.rs  resource_gate.rs  video.rs  whisper.rs  whisper_audio.rs  whisper_onnx.rs
crates/core/src/offload/: budget.rs  eviction.rs  hydration.rs  mod.rs  scoring.rs
crates/core/src/restore/: key_recovery.rs  manifest_verifier.rs  mod.rs  pipeline.rs  state_machine.rs
crates/core/src/scheduler/: in_process.rs  mod.rs
crates/core/src/search/: cold_shard_source.rs  coordinator.rs  fuzzy_search.rs  mod.rs  query_engine.rs  search_target.rs  semantic_search.rs  shard_builder.rs  shard_cache.rs  shard_prefetch.rs  text_search.rs  tokenizer.rs
crates/core/src/transport/: dedup_analytics.rs  http_client.rs  mod.rs  offline.rs
crates/core/tests/: archive_pipeline.rs  backup_pipeline.rs  backup_restore_multilingual.rs  benchmark_baseline.rs  benchmark_results.json  clip_inference.rs  cold_shard_search.rs  e2e_demo.rs  e2e_demo_dataset.rs  epoch_key_derivation.rs  failure_scenarios.rs  http_model_downloader.rs  key_wrap_hierarchy.rs  large_scale.rs  large_scale_test.rs  manifest_signing.rs  media_migration.rs  media_pipeline.rs  media_sink_stress.rs  mixed_language_query.rs  multi_scope_search.rs  multilingual_fuzzy_search.rs  multilingual_search.rs  pattern_c_interop_vectors.json  pattern_c_interop_vectors.rs  phase5_latency_smoke.rs  phase6_embedding_cache.rs  phase8_multi_scope_search.rs  scheduler_integration.rs  storage_budget_enforcement.rs  whisper_inference.rs  xlmr_inference.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: background.rs  lib.rs  macos.rs  ml_ep.rs  spotlight.rs  windows.rs  windows_search.rs
crates/ios-bridge/: Cargo.toml  build.rs
crates/ios-bridge/src/: kchat.udl  lib.rs
docs/: ARCHITECTURE.md  BLOG_PRIVACY_ARCHITECTURE.md  DESIGN.md  PARKED_FOLLOWUPS.md  PHASES.md  PROGRESS.md  PROPOSAL.md
docs/benchmarks/: cross-repo-summary.md  phase1-benchmark-results.md
tests/generate_vectors/: go.mod  go.sum  main.go
