[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ios-bridge",
    "crates/android-bridge",
    "crates/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# `LicenseRef-Proprietary` is the SPDX-3.x syntax for a custom (non-SPDX)
# license identifier. Using a valid SPDX expression here means tools that
# parse `Cargo.toml` (cargo-deny, cargo-about, dependency-license bots)
# don't have to special-case the workspace — they treat it like any other
# allow-listed expression. The literal text `Proprietary` would NOT parse
# under SPDX 2.x or 3.x.
license = "LicenseRef-Proprietary"

[workspace.dependencies]
# ONNX Runtime — optional, off by default. Phase 6 wires this into
# `crates/core/src/models/{embeddings_onnx,clip}.rs`. We pin to a
# version with a stable v2 API surface (`ort::ep::DirectML`,
# `Session::builder()`, etc.). Default features are explicitly
# listed (rather than relying on `default-features = true`) so
# the dep tree is auditable — `download-binaries` makes the
# `ort-sys` build script fetch a prebuilt ORT shared library at
# compile time (CI hosts have outbound network), avoiding the
# need for callers to set `ORT_LIB_LOCATION`. The Windows target
# adds the `directml` feature in `crates/core/Cargo.toml`.
#
# Note: `load-dynamic` is intentionally NOT enabled — that path
# exposes a `SessionOptionsAppendExecutionProvider_VitisAI` binding
# bug in ort 2.0.0-rc.12 (`ort/src/ep/vitis.rs` references a field
# that is not in `ort-sys` 2.0.0-rc.12's `OrtApi`).
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "copy-dylibs", "api-24", "tls-rustls"] }

# HuggingFace `tokenizers` — backs the SentencePiece / WordPiece
# tokenization step of the XLM-R inference loop in
# `crates/core/src/models/embeddings_onnx.rs`. We disable default
# features and re-enable only `onig` — the upstream crate
# unconditionally references `onig::Regex` outside the
# `unstable_wasm` cfg gate (see
# `tokenizers/src/utils/mod.rs`), so the `onig` (Oniguruma)
# regex backend is the only viable choice for a native build;
# `progressbar` and `esaxx_fast` are training-time tooling we
# don't need at inference. The `onig` C library builds from
# bundled source via `onig_sys`, which works for all our
# cross-compile targets (Linux/macOS/Windows/Android/iOS).
# Pinned through the `onnx-runtime` cargo feature so the
# standard workspace build does not pull this crate.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
