[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ios-bridge",
    "crates/android-bridge",
    "crates/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# `LicenseRef-Proprietary` is the SPDX-3.x syntax for a custom (non-SPDX)
# license identifier. Using a valid SPDX expression here means tools that
# parse `Cargo.toml` (cargo-deny, cargo-about, dependency-license bots)
# don't have to special-case the workspace — they treat it like any other
# allow-listed expression. The literal text `Proprietary` would NOT parse
# under SPDX 2.x or 3.x.
license = "LicenseRef-Proprietary"

[workspace.dependencies]
# ONNX Runtime — optional, off by default. Phase 6 wires this into
# `crates/core/src/models/{embeddings_onnx,clip}.rs`. We pin to a
# version with a stable v2 API surface (`ort::ep::DirectML`,
# `Session::builder()`, etc.). Default features are explicitly
# listed (rather than relying on `default-features = true`) so
# the dep tree is auditable — `download-binaries` makes the
# `ort-sys` build script fetch a prebuilt ORT shared library at
# compile time (CI hosts have outbound network), avoiding the
# need for callers to set `ORT_LIB_LOCATION`. The Windows target
# adds the `directml` feature in `crates/core/Cargo.toml`.
#
# Note: `load-dynamic` is intentionally NOT enabled — that path
# exposes a `SessionOptionsAppendExecutionProvider_VitisAI` binding
# bug in ort 2.0.0-rc.12 (`ort/src/ep/vitis.rs` references a field
# that is not in `ort-sys` 2.0.0-rc.12's `OrtApi`).
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "copy-dylibs", "api-24", "tls-rustls"] }

# Pure-Rust FFT used by `crates/core/src/models/whisper_audio.rs` for
# the log-mel spectrogram step of the Whisper inference loop. Pinned
# at a single workspace version so the `whisper_audio` mel kernel
# (no-feature, always compiled) and the future ORT-feature Whisper
# wrapper (`OnnxWhisperTranscriber`) consume the same FFT planner.
# `default-features = false` removes the optional `avx` runtime
# dispatch (we run on aarch64 mobile too, where AVX is irrelevant and
# the dispatch adds an unnecessary CPUID branch). The crate is pure
# Rust — no native libs to link — so it compiles cleanly for every
# cross-target (Linux/macOS/Windows/iOS/Android).
rustfft = { version = "6.2", default-features = false }

# HuggingFace `tokenizers` — backs both the XLM-R inference loop
# (`crates/core/src/models/embeddings_onnx.rs`) and the Whisper
# inference loop (`crates/core/src/models/whisper_onnx.rs`).
# Both ONNX exports ship a HuggingFace-compatible `tokenizer.json`
# next to the `.onnx` artifact, so the same `Tokenizer::from_file`
# entry point loads either model's vocab + merges + special tokens.
# `default-features = false` drops the `progressbar` + `http`
# features we don't need on-device; `onig` is the Oniguruma regex
# backend the GPT-2 byte-level pre-tokeniser uses for Whisper, and
# is also the dependency XLM-R selects via its sentencepiece
# normaliser path inside `tokenizers/src/utils/mod.rs`.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
