[package]
name = "kchat-android-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Android JNI bridge for kchat-core. Phase 1 scaffold — `Java_com_kchat_core_KChatBridge_*` entry points wired to CoreImpl."

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
kchat-core = { path = "../core" }
jni = "0.21"
uuid = { version = "1", features = ["v7", "serde"] }
serde_json = "1"
thiserror = "2"
