[package]
name = "kchat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KChat Storage & Search — platform-agnostic core (E2EE local store, archive, backup, search)."

[dependencies]
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
aes-kw = "0.2"
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl", "column_decltype"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "phase1_benchmarks"
harness = false
