[package]
name = "kchat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "KChat Storage & Search — platform-agnostic core (E2EE local store, archive, backup, search)."

[features]
default = []
# Enables the Phase 6 ONNX Runtime scaffold for XLM-R + MobileCLIP-S2.
# Off by default so the standard `cargo build --workspace` and
# `cargo test --workspace` do not pull the `ort` crate. The
# EP-selection state machine in `models::embeddings_onnx` and
# `models::clip` is ALWAYS compiled (no feature gate) so unit tests
# can exercise it on any host; only the actual `ort::Session`
# creation is gated behind this feature plus
# `cfg(target_os = "windows")` (DirectML attempt) or
# `cfg(not(target_os = "windows"))` (CPU EP only). See
# `docs/ARCHITECTURE.md §11.4`.
onnx-runtime = ["dep:ort"]
# Phase 2 (2026-05-04 final batch) — Task 4: production HTTP
# transport. Off by default so the workspace build doesn't pull
# `reqwest` and its transitive deps; bridge crates flip it on
# when wiring `CoreImpl` against a real backend. See
# `transport::http_client`.
http-transport = ["dep:reqwest", "dep:serde_json"]

[dependencies]
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
aes-kw = "0.2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
# CBOR encode / decode for the on-wire / on-disk binary frames in
# `crates/core/src/formats/`. We use `ciborium` (RustCrypto, actively
# maintained) rather than `serde_cbor` (last release 2021,
# `RUSTSEC-2021-0127`). All call sites go through the `crate::cbor`
# facade so the dependency stays auditable.
ciborium = "0.2"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
# ML-DSA-65 (FIPS 204) post-quantum signatures, paired with
# Ed25519 in the hybrid manifest signing scheme — see
# `crates/core/src/crypto/signing.rs` and
# `docs/PROPOSAL.md §2.1`. Pinned to 0.0.4 because it tracks the
# `signature` 2.x API surface used by `ed25519-dalek 2`; later
# `0.1.0-rc.*` lines move to `signature` 3.x and `rand_core` 0.10
# which conflict with the ed25519/rand stack the rest of the
# crate already pulls. The `rand_core` feature is enabled so the
# randomized variant is available; the manifest signer itself
# uses `sign_deterministic` so signatures are reproducible.
ml-dsa = { version = "0.0.4", features = ["rand_core"] }
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl", "column_decltype"] }
unicode-normalization = "0.1"
# Image decoding + resizing for Phase 2 thumbnail generation
# (`crates/core/src/media/thumbnail.rs`). `default-features = false`
# keeps the dep tree lean — we only need PNG and JPEG codecs at this
# phase. No dynamic library lookup is required.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# zstd compression for Phase 3 archive segments
# (`crates/core/src/archive/segment_builder.rs`). The bundled C
# library is statically linked so callers don't need a system
# `libzstd`.
zstd = { version = "0.13", default-features = false }
# Argon2id KDF for passphrase-based key recovery
# (`crates/core/src/restore/key_recovery.rs`). The `alloc` feature
# enables the heap-allocating helpers we need; we deliberately
# pin OWASP-recommended mobile parameters (m_cost = 65 536 KiB,
# t_cost = 3, p_cost = 1) inside the wrapper so callers cannot
# accidentally weaken them.
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
instant-distance = "0.6"
ort = { workspace = true, optional = true }
# Phase 2 (2026-05-04 final batch) — Task 4: production
# HTTP transport. Pinned with `rustls-tls` so we don't drag in
# system OpenSSL on iOS / Android / desktop builds. `blocking`
# matches the synchronous `TransportClient` trait shape; an
# async flip is a phase-2-bis follow-up. Optional + only enabled
# under the `http-transport` feature.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
# JSON encode/decode for the production transport wire format.
serde_json = { version = "1", optional = true }

# On Windows builds, additionally enable the `directml` feature on the
# `ort` crate so `ort::ep::DirectML` is available for the preferred-EP
# attempt in `models::embeddings_onnx::create_xlmr_session` and
# `models::clip::create_mobileclip_session`. Cargo unifies features
# across `[dependencies]` and `[target.*.dependencies]`, so the
# resulting `ort` build on Windows is `[..., directml]` while the
# Linux / macOS build (used by CI lint and by the `--all-features`
# clippy pass) does NOT enable `directml` and therefore does not
# require any DirectML SDK to be present.
[target.'cfg(windows)'.dependencies]
ort = { workspace = true, optional = true, features = ["directml"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "phase1_benchmarks"
harness = false

[[bench]]
name = "phase5_benchmarks"
harness = false

[[bench]]
name = "phase6_int4_benchmarks"
harness = false

[[bench]]
name = "phase8_benchmarks"
harness = false
