[package]
name = "kchat-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Desktop (macOS / Windows) consumer crate for kchat-core."

[lib]
crate-type = ["lib"]

[features]
default = []
# Mirror of the `kchat-core` feature — flipping this on the
# `kchat-desktop` crate compiles the desktop ONNX session helpers
# in `desktop::ml_ep`.
onnx-runtime = ["kchat-core/onnx-runtime"]

[dependencies]
kchat-core = { path = "../core" }
# Structured logging — `kchat-core` emits tracing spans / events on
# all hot paths. The desktop crate installs a plain
# stderr fmt subscriber so events surface in the dev console
# without depending on platform-specific log frameworks.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
